WIP: achievements/frames expansion, backend job-queue bridge, chunk-activity heatmap
Commits the large in-progress state sitting on top of "last commit
before project is frozen" — advancement/condition listeners for the
frames catalog (BeeBreedListener, ContinuousConditionListener, etc.),
the HTTP job-queue side of the site integration (auth/*RequestPoller,
FarLandsApiClient, PlanStatsReporter — see BACKEND_BRIDGE.md), and
chunk-activity/heatmap reporting (BuildMaterialWeights, HeatmapReporter,
LandValueWeights).

Includes two bugs_to_fix.txt fixes:
- GoldAboveGroundListener now tracks player-placed gold ore (BlockPlaceEvent)
  and excludes it from the "gold rush" achievement when broken.
- MossSpreadListener threshold raised 100 -> 1000 for "кузнец-первопроходец"
  (BlockFertilizeEvent grants blocks in batches of 20-40+, so 100 was
  clearable in 2-3 clicks of bone meal); achievement text updated to match.

Not yet built/verified locally (no Maven on this machine) — build and
smoke-test before deploying.