@@ -1,5 +1,6 @@
 package com.frammy.unitylauncher.zones;
 
+import static com.frammy.unitylauncher.UnityLauncher.DBConnect;
 import com.frammy.unitylauncher.UnityLauncher;
 import com.frammy.unitylauncher.BlueMapIntegration;
 import com.frammy.unitylauncher.chunkactivity.ActivityTracker;
@@ -22,6 +23,13 @@ import org.bukkit.Location;
 import org.bukkit.entity.Player;
 import org.bukkit.World;
 
+import java.sql.PreparedStatement;
+import java.sql.Timestamp;
+import com.frammy.unitylauncher.zones.web.ZoneWebRequestService;
+import com.google.gson.Gson;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
+
 import java.io.File;
 import java.sql.Connection;
 import java.time.LocalDate;
@@ -29,10 +37,10 @@ import java.time.ZoneId;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
-
+import com.google.gson.JsonArray;
 import static com.frammy.unitylauncher.UnityCommands.calculateSurfaceArea;
 
-public class ZoneManager {
+public class ZoneManager implements com.frammy.unitylauncher.zones.web.ZoneWebRequestHandler {
 
     // ==== DI / State ====
     public final UnityLauncher ul;
@@ -60,16 +68,56 @@ public class ZoneManager {
     private final ZoneSignOwnershipService signOwnershipService;
     private final ZoneCommands commands;
     private final ZoneValidationService validator;
+    private final ZoneQuotaService quotaService;
+
+    /** Типы, до которых можно бесплатно "повысить" PLOT (Участок) — при наличии квоты и подходящей площади. */
+    private static final EnumSet<ZoneType> UPGRADEABLE_FROM_PLOT = EnumSet.of(
+            ZoneType.SHOP, ZoneType.BANK, ZoneType.HOSPITAL, ZoneType.INDUSTRIAL,
+            ZoneType.PARK, ZoneType.CHURCH, ZoneType.LIBRARY, ZoneType.GREENHOUSE
+    );
 
     /** Иммутабельная копия всех зон для безопасного чтения. */
     public List<ZoneInfo> getAllZonesSnapshot() {
         // zoneList — это Map<String, ZoneInfo> со всеми зонами по markerID
         return new ArrayList<>(zoneList.values());
     }
+    public record ZoneOpResult(boolean success, String message, String markerId) {
+        public static ZoneOpResult ok(String msg, String markerId) { return new ZoneOpResult(true, msg, markerId); }
+        public static ZoneOpResult fail(String msg) { return new ZoneOpResult(false, msg, null); }
+    }
 
     // --- КУЛДАУН РЕДАКТИРОВАНИЯ УГЛОВ ДЛЯ COUNTRY и COLONY (персистентно через YAML) ---
     private final Map<String, Long> lastCornersEditByMarker = new ConcurrentHashMap<>();
     private static final long CORNERS_EDIT_COOLDOWN_MS = 2L * 24L * 60L * 60L * 1000L; // 2 суток
+
+    // --- КУЛДАУН СМЕНЫ ИМЕНИ/ЦВЕТА ЗОНЫ (только в памяти — сбрасывается при
+    // рестарте сервера; ниже риск, чем у границ, поэтому не стали городить
+    // отдельную персистентность через ZoneYamlRepository) ---
+    private final Map<String, Long> lastNameColorEditByMarker = new ConcurrentHashMap<>();
+    private static final long NAME_COLOR_EDIT_COOLDOWN_MS = 24L * 60L * 60L * 1000L; // 1 сутки
+
+    /**
+     * Оставшееся время кулдауна на изменение территории (границы/добавление
+     * фигуры) в мс, 0 если можно редактировать прямо сейчас. Только для
+     * COUNTRY/COLONY — у остальных типов зон такого кулдауна нет. Публично,
+     * чтобы ZoneRequestPoller мог отдать это в zones_sync-снапшоте для сайта
+     * (Менеджер зон заранее блокирует кнопки вместо того, чтобы игрок узнавал
+     * про кулдаун только после отклонённой заявки).
+     */
+    public long cornersCooldownRemainingMs(ZoneInfo z) {
+        if (z == null || (z.getType() != ZoneType.COUNTRY && z.getType() != ZoneType.COLONY)) return 0;
+        Long last = lastCornersEditByMarker.get(z.getMarkerID());
+        if (last == null) return 0;
+        return Math.max(0, CORNERS_EDIT_COOLDOWN_MS - (System.currentTimeMillis() - last));
+    }
+
+    /** Оставшееся время кулдауна на смену имени/цвета в мс, 0 если можно прямо сейчас — см. cornersCooldownRemainingMs. */
+    public long nameColorCooldownRemainingMs(ZoneInfo z) {
+        if (z == null) return 0;
+        Long last = lastNameColorEditByMarker.get(z.getMarkerID());
+        if (last == null) return 0;
+        return Math.max(0, NAME_COLOR_EDIT_COOLDOWN_MS - (System.currentTimeMillis() - last));
+    }
 
     // ==== Command bridges (чтобы команды жили отдельно, а логика тут) ====
 
@@ -106,11 +154,49 @@ public class ZoneManager {
         removeZone(p);
     }
 
+    void addMemberCmd(Player p, String targetPlayer) {
+        ZoneInfo zi = resolvePlayerZoneForUpdate(p);
+        if (zi == null) { p.sendMessage(ChatColor.RED + "Не удалось определить, какую из ваших зон редактировать. Зайдите в нужную зону ещё раз."); return; }
+        ZoneOpResult r = addMemberCore(p.getName(), zi, targetPlayer);
+        if (r.message() != null) p.sendMessage(r.message());
+    }
+
+    void removeMemberCmd(Player p, String targetPlayer) {
+        ZoneInfo zi = resolvePlayerZoneForUpdate(p);
+        if (zi == null) { p.sendMessage(ChatColor.RED + "Не удалось определить, какую из ваших зон редактировать. Зайдите в нужную зону ещё раз."); return; }
+        ZoneOpResult r = removeMemberCore(p.getName(), zi, targetPlayer);
+        if (r.message() != null) p.sendMessage(r.message());
+    }
+
+    void transferOwnerCmd(Player p, String targetPlayer) {
+        ZoneInfo zi = resolvePlayerZoneForUpdate(p);
+        if (zi == null) { p.sendMessage(ChatColor.RED + "Не удалось определить, какую из ваших зон редактировать. Зайдите в нужную зону ещё раз."); return; }
+        ZoneOpResult r = transferOwnershipCore(p.getName(), zi, targetPlayer);
+        if (r.message() != null) p.sendMessage(r.message());
+    }
+
     public void handleCommand(Player p, String[] args) {
         commands.handle(p, args);
     }
 
     public final Map<ZoneType, ZoneTypeData> zoneLimits = new EnumMap<>(ZoneType.class);
+
+    // ==== Докупаемое расширение территории Государства (см. upgrades_country.json: 9_territoryExpansion) ====
+    private static final String COUNTRY_TERRITORY_BONUS_PERM = "unity.zone.territory_bonus";
+    private static final int COUNTRY_TERRITORY_BONUS_MAX_LEVEL = 5;
+    private static final double COUNTRY_TERRITORY_BONUS_PER_LEVEL = 5000.0; // блоков² за уровень
+
+    /** Эффективный лимит площади для типа с учётом докупленного бонуса страны (актуально только для COUNTRY). */
+    public double countryAreaLimitFor(ZoneType type, String countryName) {
+        ZoneTypeData ztd = zoneLimits.get(type);
+        if (ztd == null) return 0;
+        if (type != ZoneType.COUNTRY || countryName == null || countryName.isBlank()) return ztd.areaLimit();
+
+        int lvl = com.frammy.unitylauncher.upgrades.UpgradeCondition.countryMaxLevel(
+                com.frammy.unitylauncher.upgrades.UpgradeCondition.resolveCountryGroupId(countryName),
+                COUNTRY_TERRITORY_BONUS_PERM, COUNTRY_TERRITORY_BONUS_MAX_LEVEL);
+        return ztd.areaLimit() + lvl * COUNTRY_TERRITORY_BONUS_PER_LEVEL;
+    }
 
     // ==== Lifecycle / IO ====
     public ZoneManager(UnityLauncher plugin, SignManager signManager, BlueMapIntegration blueMapIntegration, ActivityTracker activityTracker) {
@@ -131,16 +217,21 @@ public class ZoneManager {
         zoneLimits.put(ZoneType.GREENHOUSE, new ZoneTypeData("Теплица",       900.0, 4,   5.0, false, 1.0,  20, "unityLauncher.createZone.greenhouse"));
 
         zoneLimits.put(ZoneType.SHOP,       new ZoneTypeData("Торговая точка", 500.0, 10, 3.0, true, 1.0, 10, "unityLauncher.createZone.shop"));
+        zoneLimits.put(ZoneType.PLOT,       new ZoneTypeData("Участок",        500.0, 10, 3.0, true, 1.0, 10, "unityLauncher.createZone.plot"));
 
         File zonesFile = new File(plugin.getDataFolder(), "zones.yml");
         this.zoneRepo = new ZoneYamlRepository(zonesFile);
 
         this.blueMapService = new ZoneBlueMapService(this.blueMapIntegration, this.zoneLimits);
-        ZoneQuotaService quotaService = new ZoneQuotaService(this::getAllZonesSnapshot);
+        this.quotaService = new ZoneQuotaService(this::getAllZonesSnapshot);
         this.signOwnershipService = new ZoneSignOwnershipService(ul, this::getAllZonesSnapshot);
         this.commands = new ZoneCommands(this);
         this.validator = new ZoneValidationService(ul, quotaService, zoneLimits, zoneList);
 
+    }
+
+    public ZoneQuotaService getQuotaService() {
+        return quotaService;
     }
 
     public void setSignManager(SignManager signManager) {
@@ -199,7 +290,7 @@ public class ZoneManager {
 
         // Ранний отказ, чтобы не ставили точки впустую (единая проверка для всех типов)
         if (pts.isEmpty()) {
-            var r = validator.validateStartAddCorner(p, type, playerHasCountryZone(p.getName()));
+            var r = validator.validateStartAddCorner(p.getUniqueId(), p.getName(), p.getWorld(), type, playerHasCountryZone(p.getName()));
             if (!r.success()) {
                 p.sendMessage(r.message());
                 pendingZoneType.remove(id);
@@ -234,110 +325,145 @@ public class ZoneManager {
     }
 
     /** Создание территории страны: имя — из КЭША CountryRegistryJdbc; если пусто — запрет. */
+    // команда — тонкая обёртка, поведение не меняется вообще
     private boolean buildZoneCountry(Player p) {
-        String playerCountry = ul.countryRegistryJdbc.getCountryOfPlayer(p.getName());
-        if (playerCountry == null || playerCountry.isBlank()) {
-            p.sendMessage(ChatColor.RED + "Нельзя создать Государство: вы не состоите ни в одной стране.");
-            return false;
-        }
-
-        if (!ul.countryRegistryJdbc.isCountryLeaderCached(p.getName())) {
-            String leader = ul.countryRegistryJdbc.getLeaderOfCountry(playerCountry);
-            p.sendMessage(ChatColor.RED + "Недостаточно прав: только лидер страны может создавать Государство."
-                    + (leader != null ? ChatColor.GRAY + " Лидер: " + leader : ""));
-            return false;
-        }
-
-        if (playerHasCountryZone(p.getName())) {
-            p.sendMessage(ChatColor.RED + "У вас уже есть территория Государства. Сначала удалите существующую.");
-            return false;
-        }
-
         List<Location> pts = zonePoints.get(p.getUniqueId());
-        if (pts == null || pts.size() < 3) {
-            p.sendMessage(ChatColor.RED + "Нужно минимум 3 точки!");
-            return false;
+        ZoneOpResult r = buildZoneCountryCore(p.getName(), pts == null ? List.of() : List.of(pts), null);
+        if (r.message() != null) p.sendMessage(r.message());
+        return r.success();
+    }
+
+    /**
+     * Ядро создания территории Государства — переиспользуется командой и веб-обработчиком.
+     * Поддерживает МУЛЬТИ-ПОЛИГОН (несколько отдельных эксклавов территории сразу),
+     * в отличие от Колонии, которая принципиально однополигональна.
+     */
+    private ZoneOpResult buildZoneCountryCore(String playerName, List<List<Location>> shapes, String colorHex) {
+        String playerCountry = ul.countryRegistryJdbc.getCountryOfPlayer(playerName);
+        if (playerCountry == null || playerCountry.isBlank()) {
+            // страна могла быть создана через сайт секунды назад — кэш стран (TTL 5с)
+            // на главном потоке ещё не успел обновиться асинхронно. Форсируем
+            // синхронный рефреш и пробуем ещё раз, прежде чем окончательно отказать.
+            ul.countryRegistryJdbc.forceRefreshBlocking();
+            playerCountry = ul.countryRegistryJdbc.getCountryOfPlayer(playerName);
+        }
+        if (playerCountry == null || playerCountry.isBlank()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Нельзя создать Государство: вы не состоите ни в одной стране.");
+        }
+        if (!ul.countryRegistryJdbc.isCountryLeaderCached(playerName)) {
+            String leader = ul.countryRegistryJdbc.getLeaderOfCountry(playerCountry);
+            return ZoneOpResult.fail(ChatColor.RED + "Недостаточно прав: только лидер страны может создавать Государство."
+                    + (leader != null ? ChatColor.GRAY + " Лидер: " + leader : ""));
+        }
+        if (playerHasCountryZone(playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "У вас уже есть территория Государства. Сначала удалите существующую.");
+        }
+        if (shapes == null || shapes.isEmpty() || shapes.get(0) == null || shapes.get(0).size() < 3) {
+            return ZoneOpResult.fail(ChatColor.RED + "Нужно минимум 3 точки!");
+        }
+        for (List<Location> shape : shapes) {
+            if (shape == null || shape.size() < 3) {
+                return ZoneOpResult.fail(ChatColor.RED + "Каждая часть территории должна иметь минимум 3 точки!");
+            }
         }
 
-        World w0 = pts.getFirst().getWorld();
-        if (!pts.stream().allMatch(l -> l.getWorld().equals(w0))) {
-            p.sendMessage(ChatColor.RED + "Все точки должны быть в одном мире.");
-            return false;
+        List<Location> firstShape = shapes.get(0);
+        World w0 = firstShape.getFirst().getWorld();
+        for (List<Location> shape : shapes) {
+            if (!shape.stream().allMatch(l -> l.getWorld().equals(w0))) {
+                return ZoneOpResult.fail(ChatColor.RED + "Все точки должны быть в одном мире.");
+            }
         }
         if (w0.getEnvironment() != World.Environment.NORMAL) {
-            p.sendMessage(ChatColor.RED + "Государство можно создавать только в Overworld.");
-            return false;
+            return ZoneOpResult.fail(ChatColor.RED + "Государство можно создавать только в Overworld.");
         }
 
-        ZoneInfo candidate = new ZoneInfo(
-                ZoneType.COUNTRY,
-                "tmp_id",
-                playerCountry,
-                "tmp_marker",
-                pts,
-                p.getName(),
-                org.bukkit.Color.WHITE
-        );
+        // части территории (эксклавы) не должны пересекаться между собой и должны
+        // соблюдать общий зазор/разброс (та же логика, что и ADD_SHAPE для обычных зон)
+        if (shapes.size() > 1) {
+            for (int i = 1; i < shapes.size(); i++) {
+                List<Location> shape = shapes.get(i);
+                List<List<Location>> prior = shapes.subList(0, i);
 
+                var newPoly = com.frammy.unitylauncher.zones.geom.ZoneGeometry.toJtsPolygon(shape);
+                for (List<Location> priorShape : prior) {
+                    var priorPoly = com.frammy.unitylauncher.zones.geom.ZoneGeometry.toJtsPolygon(priorShape);
+                    if (newPoly != null && priorPoly != null && newPoly.intersects(priorPoly)) {
+                        return ZoneOpResult.fail(ChatColor.RED + "Части территории Государства не должны пересекаться между собой.");
+                    }
+                }
+
+                String spacingErr = com.frammy.unitylauncher.zones.geom.ZoneGeometry.checkShapeSpacing(shape, prior);
+                if (spacingErr != null) {
+                    return ZoneOpResult.fail(ChatColor.RED + spacingErr);
+                }
+            }
+        }
+
+        ZoneInfo candidate = new ZoneInfo(ZoneType.COUNTRY, "tmp_id", playerCountry, "tmp_marker", firstShape, playerName, org.bukkit.Color.WHITE);
+        for (int i = 1; i < shapes.size(); i++) candidate.addShape(shapes.get(i));
         for (ZoneInfo existing : zoneList.values()) {
             if (!ZoneOverlapRules.canZonesCoexist(candidate, existing, zoneLimits)) {
-                p.sendMessage(ChatColor.RED + "Нельзя создать Государство: конфликт с зоной "
-                        + ChatColor.GOLD + existing.getName()
-                        + ChatColor.RED + " (" + existing.getType() + ").");
-                return false;
+                return ZoneOpResult.fail(ChatColor.RED + "Нельзя создать Государство: конфликт с зоной "
+                        + ChatColor.GOLD + existing.getName() + ChatColor.RED + " (" + existing.getType() + ").");
             }
         }
 
         String markerID = java.util.UUID.randomUUID().toString();
         String zoneID = "zone_" + markerID;
-
-        org.bukkit.Color defaultColor = org.bukkit.Color.fromRGB(255, 0, 0);
-        ZoneInfo created = new ZoneInfo(
-                ZoneType.COUNTRY,
-                zoneID,
-                playerCountry,
-                markerID,
-                pts,
-                p.getName(),
-                defaultColor
-        );
+        org.bukkit.Color chosenColor = parseColorHexOrDefault(colorHex);
+        ZoneInfo created = new ZoneInfo(ZoneType.COUNTRY, zoneID, playerCountry, markerID, firstShape, playerName, chosenColor);
+        for (int i = 1; i < shapes.size(); i++) created.addShape(shapes.get(i));
         created.setOwnerCountry(playerCountry);
 
-        double areaCountry = calculateSurfaceArea(pts);
+        double areaCountry = com.frammy.unitylauncher.zones.geom.ZoneGeometry.totalArea(shapes);
         ul.countryRegistryJdbc.setCountryAreaPreserveMoney(playerCountry, areaCountry);
 
         zoneList.put(markerID, created);
         lastCornersEditByMarker.put(markerID, System.currentTimeMillis());
-
-        blueMapService.upsert(created, defaultColor);
-
-        p.sendMessage(ChatColor.GREEN + "Территория страны \"" + playerCountry + "\" создана! ");
-
+        blueMapService.upsert(created, chosenColor);
         ul.countryRegistryJdbc.ensureInitialAtmAllowance(playerCountry, 5);
+        syncZoneToWebView(created); // см. ниже
 
-        clearPendingBuildState(p.getUniqueId());
         saveZonesToConfig();
-        return true;
+        return ZoneOpResult.ok(ChatColor.GREEN + "Территория страны \"" + playerCountry + "\" создана!", markerID);
     }
 
     /** Создание обычных зон: принадлежат игроку, страна НЕ проставляется при создании. */
     private boolean buildZone(Player p, ZoneType type, String zoneName) {
         List<Location> pts = zonePoints.get(p.getUniqueId());
-        var vr = validator.validateBuildZone(p, type, zoneName, pts);
+        ZoneOpResult r = buildZoneCore(p.getUniqueId(), p.getName(), type, zoneName, pts, null);
+        if (r.message() != null) p.sendMessage(r.message());
+        if (r.success()) clearPendingBuildState(p.getUniqueId());
+        return r.success();
+    }
+
+    private ZoneOpResult buildZoneCore(UUID playerUuid, String playerName, ZoneType type, String zoneName, List<Location> pts, String colorHex) {
+        return buildZoneCore(playerUuid, playerName, type, zoneName, pts, colorHex, true);
+    }
+
+    /**
+     * @param syncToWeb writing the async DB row (zones_view) here can race with a
+     *                  second write done later for the same marker_id (see
+     *                  buildZoneCoreMulti, которая добавляет доп. фигуры сразу после
+     *                  создания) — тогда какая запись "выиграет" не гарантировано,
+     *                  и extra_shapes может молча потеряться. Передавайте false,
+     *                  если вызывающий код сам вызовет syncZoneToWebView() один раз,
+     *                  уже после того как зона полностью собрана.
+     */
+    private ZoneOpResult buildZoneCore(UUID playerUuid, String playerName, ZoneType type, String zoneName, List<Location> pts, String colorHex, boolean syncToWeb) {
+        var vr = validator.validateBuildZone(playerUuid, playerName, type, zoneName, pts);
         if (!vr.success()) {
-            p.sendMessage(vr.message());
-            return false;
+            return ZoneOpResult.fail(vr.message());
         }
 
-        // страна игрока (может быть null)
-        String playerCountry = ul.countryRegistryJdbc.getCountryOfPlayer(p.getName());
+        String playerCountry = ul.countryRegistryJdbc.getCountryOfPlayer(playerName);
 
-        // Всё ок — создаём сам объект ZoneInfo
         String markerID = java.util.UUID.randomUUID().toString();
         String zoneID = "zone_" + markerID;
 
-        org.bukkit.Color defaultColor = org.bukkit.Color.fromRGB(255, 0, 0);
-        ZoneInfo created = new ZoneInfo(type, zoneID, zoneName, markerID, pts, p.getName(), defaultColor);
+        org.bukkit.Color color = parseColorHexOrDefault(colorHex);
+        ZoneInfo created = new ZoneInfo(type, zoneID, zoneName, markerID, pts, playerName, color);
 
         if (playerCountry != null && !playerCountry.isBlank()) {
             created.setOwnerCountry(playerCountry);
@@ -345,20 +471,27 @@ public class ZoneManager {
 
         zoneList.put(markerID, created);
         lastCornersEditByMarker.put(markerID, System.currentTimeMillis());
+        blueMapService.upsert(created, color);
+        if (syncToWeb) syncZoneToWebView(created);
 
-        blueMapService.upsert(created, defaultColor);
-
-        p.sendMessage(ChatColor.GREEN + "Зона \"" + zoneName + "\" создана!");
-
-        // === Если это колония — добавляем её площадь ===
         if (type == ZoneType.COLONY) {
             double colonyArea = calculateSurfaceArea(pts);
             ul.countryRegistryJdbc.addCountryArea(playerCountry, colonyArea);
         }
 
-        clearPendingBuildState(p.getUniqueId());
         saveZonesToConfig();
-        return true;
+        return ZoneOpResult.ok(ChatColor.GREEN + "Зона \"" + zoneName + "\" создана!", markerID);
+    }
+
+    private static org.bukkit.Color parseColorHexOrDefault(String hex) {
+        if (hex == null || hex.isBlank()) return org.bukkit.Color.fromRGB(255, 0, 0);
+        try {
+            String h = hex.startsWith("#") ? hex.substring(1) : hex;
+            if (h.length() != 6) return org.bukkit.Color.fromRGB(255, 0, 0);
+            return org.bukkit.Color.fromRGB(Integer.parseInt(h, 16));
+        } catch (Exception e) {
+            return org.bukkit.Color.fromRGB(255, 0, 0);
+        }
     }
 
     public void updateZone(Player p, String updateType, String value) {
@@ -369,98 +502,384 @@ public class ZoneManager {
         }
         playerLastZone.put(p.getUniqueId(), zi);
 
-        switch (updateType) {
+        ZoneOpResult r = switch (updateType) {
             case "corners" -> {
-                // Кулдаун 2 суток для COUNTRY и COLONY
-                if (zi.getType() == ZoneType.COUNTRY || zi.getType() == ZoneType.COLONY) {
-                    long now = System.currentTimeMillis();
-                    long last = lastCornersEditByMarker.getOrDefault(zi.getMarkerID(), 0L);
-                    long left = CORNERS_EDIT_COOLDOWN_MS - (now - last);
-                    if (left > 0) {
-                        long hrs = (left + 3_600_000L - 1) / 3_600_000L;
-                        p.sendMessage(ChatColor.RED + "Изменение углов доступно через ~" + ChatColor.YELLOW + hrs + ChatColor.RED + " ч.");
-                        return;
-                    }
-                }
-
-                // Биллинг как у вас было
-                LocalDate today = LocalDate.now(zoneId);
-                double due = zi.getDueSinceLastBill(today);
-                int days = zi.getDueDaysCount(today);
-                if (due > 0) {
-                    p.sendMessage(ChatColor.GRAY + "Перед изменением оплатите " + ChatColor.YELLOW + days + ChatColor.GRAY + " дн.: " + ChatColor.GOLD + String.format(Locale.US, "%.2f", due));
-                    try { zi.markBilled(today); p.sendMessage(ChatColor.GREEN + "Оплачено. Можно менять границы."); }
-                    catch (Exception ex) { p.sendMessage(ChatColor.RED + "Недостаточно средств: " + ex.getMessage()); return; }
-                }
-
                 if ("+".equals(value)) {
-                    List<Location> tmp = new ArrayList<>(zi.getCorners()); tmp.add(p.getLocation().clone());
-                    var vr = validator.validateUpdateCornersDraft(p, zi, tmp, true);
-                    if (!vr.success()) {
-                        p.sendMessage(vr.message());
-                        return;
-                    }
-
-                    zi.getCorners().add(p.getLocation().clone());
-                    p.sendMessage(ChatColor.GOLD + "[" + zi.getCorners().size() + "] " + ChatColor.YELLOW + "Точка добавлена. Площадь: " + ChatColor.GOLD + String.format(Locale.US,"%.2f", calculateSurfaceArea(tmp)));
+                    List<Location> tmp = new ArrayList<>(zi.getCorners());
+                    tmp.add(p.getLocation().clone());
+                    yield updateCornersCore(p.getName(), zi, tmp, true);
                 } else if ("-".equals(value)) {
-                    if (zi.getCorners().size() <= 3) { p.sendMessage(ChatColor.RED + "Минимум 3 точки!"); return; }
-
+                    if (zi.getCorners().size() <= 3) yield ZoneOpResult.fail(ChatColor.RED + "Минимум 3 точки!");
                     List<Location> tmp = new ArrayList<>(zi.getCorners());
                     tmp.removeLast();
-                    var vr = validator.validateUpdateCornersDraft(p, zi, tmp, false);
-                    if (!vr.success()) {
-                        p.sendMessage(vr.message());
-                        return;
-                    }
-
-                    zi.getCorners().removeLast();
-                    p.sendMessage(ChatColor.GRAY + "Удалена последняя точка.");
-
+                    yield updateCornersCore(p.getName(), zi, tmp, false);
                 } else {
-                    p.sendMessage(ChatColor.GRAY + "Используйте: /ul zone update corners +  или  -"); return;
+                    yield ZoneOpResult.fail(ChatColor.GRAY + "Используйте: /ul zone update corners +  или  -");
                 }
-
-                // апдейт цвета/маркер, запись таймстемпа кулдауна
-                blueMapService.upsert(zi, zi.getFillColor());
-
-                lastCornersEditByMarker.put(zi.getMarkerID(), System.currentTimeMillis());
-                saveZonesToConfig();
             }
-            case "name" -> {
-                if (zi.getType() == ZoneType.COUNTRY) {
-                    p.sendMessage(ChatColor.RED + "Имя государства менять нельзя.");
-                    return;
-                }
-                if (value == null || value.isBlank()) {
-                    p.sendMessage(ChatColor.RED + "Название не может быть пустым.");
-                    return;
-                }
+            case "name" -> updateNameCore(p.getName(), zi, value);
+            case "color" -> updateColorCore(p.getName(), zi, value);
+            default -> ZoneOpResult.fail(null);
+        };
 
-                zi.setName(value);
-                blueMapService.upsert(zi, zi.getFillColor());
+        if (r.message() != null) p.sendMessage(r.message());
+    }
+    /** isPlus сохранён для совместимости с командой (+ добавляет точку, - убирает),
+     но геометрическая проверка одна и та же — полный пересчёт нового контура. */
+    private ZoneOpResult updateCornersCore(String playerName, ZoneInfo zi, List<Location> newCorners, boolean isPlus) {
+        return updateCornersCore(playerName, zi, newCorners, isPlus, 0);
+    }
 
-                p.sendMessage(ChatColor.GREEN + "Название обновлено!");
-
-                // если это SHOP — уведомим SignManager, он обновит листы/таблички сам
-                if (zi.getType() == ZoneType.SHOP && signManager != null) {
-                    signManager.onShopZoneRenamed();
-                }
-
-            }
-            case "color" -> {
-                String[] rgb = value.split(",");
-                if (rgb.length != 3) { p.sendMessage(ChatColor.RED + "Формат: R,G,B"); return; }
-                try {
-                    org.bukkit.Color c = org.bukkit.Color.fromRGB(
-                            Integer.parseInt(rgb[0]), Integer.parseInt(rgb[1]), Integer.parseInt(rgb[2]));
-                    zi.setFillColor(c);
-                    blueMapService.upsert(zi, c);
-
-                } catch (NumberFormatException nfe) { p.sendMessage(ChatColor.RED + "Только целые числа."); }
-            }
-            default -> { /* ignore */ }
+    /** shapeIndex — какую ИМЕННО фигуру многофигурной зоны редактируем (0 = основная/единственная у обычных зон). */
+    private ZoneOpResult updateCornersCore(String playerName, ZoneInfo zi, List<Location> newCorners, boolean isPlus, int shapeIndex) {
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
         }
+
+        if (zi.getType() == ZoneType.COUNTRY || zi.getType() == ZoneType.COLONY) {
+            long now = System.currentTimeMillis();
+            long last = lastCornersEditByMarker.getOrDefault(zi.getMarkerID(), 0L);
+            long left = CORNERS_EDIT_COOLDOWN_MS - (now - last);
+            if (left > 0) {
+                long hrs = (left + 3_600_000L - 1) / 3_600_000L;
+                return ZoneOpResult.fail(ChatColor.RED + "Изменение углов доступно через ~" + ChatColor.YELLOW + hrs + ChatColor.RED + " ч.");
+            }
+        }
+
+        LocalDate today = LocalDate.now(zoneId);
+        double due = zi.getDueSinceLastBill(today);
+        int days = zi.getDueDaysCount(today);
+        String billedNote = null;
+        if (due > 0) {
+            try {
+                zi.markBilled(today);
+                billedNote = ChatColor.GRAY + "Списано за " + days + " дн.: " + ChatColor.GOLD + String.format(Locale.US, "%.2f", due) + ". ";
+            } catch (Exception ex) {
+                return ZoneOpResult.fail(ChatColor.RED + "Недостаточно средств: " + ex.getMessage());
+            }
+        }
+
+        var vr = validator.validateUpdateCornersDraft(playerName, zi, newCorners, isPlus, shapeIndex);
+        if (!vr.success()) {
+            return ZoneOpResult.fail(vr.message());
+        }
+
+        zi.setShapeAt(shapeIndex, newCorners);
+        blueMapService.upsert(zi, zi.getFillColor());
+        lastCornersEditByMarker.put(zi.getMarkerID(), System.currentTimeMillis());
+        syncZoneToWebView(zi);
+        saveZonesToConfig();
+
+        String note = (billedNote != null ? billedNote : "");
+        return ZoneOpResult.ok(note + ChatColor.GREEN + "Границы обновлены. Точек: " + newCorners.size(), zi.getMarkerID());
+    }
+
+    /** Общая проверка кулдауна смены имени/цвета — 1/сутки, независимо от кулдауна на границы. */
+    private ZoneOpResult checkNameColorCooldown(ZoneInfo zi) {
+        long now = System.currentTimeMillis();
+        long last = lastNameColorEditByMarker.getOrDefault(zi.getMarkerID(), 0L);
+        long left = NAME_COLOR_EDIT_COOLDOWN_MS - (now - last);
+        if (left > 0) {
+            long hrs = (left + 3_600_000L - 1) / 3_600_000L;
+            return ZoneOpResult.fail(ChatColor.RED + "Смена имени/цвета доступна через ~" + ChatColor.YELLOW + hrs + ChatColor.RED + " ч.");
+        }
+        return null;
+    }
+
+    private ZoneOpResult updateNameCore(String playerName, ZoneInfo zi, String newName) {
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
+        if (zi.getType() == ZoneType.COUNTRY) {
+            return ZoneOpResult.fail(ChatColor.RED + "Имя государства менять нельзя.");
+        }
+        if (newName == null || newName.isBlank()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Название не может быть пустым.");
+        }
+        ZoneOpResult cooldownFail = checkNameColorCooldown(zi);
+        if (cooldownFail != null) return cooldownFail;
+
+        zi.setName(newName);
+        blueMapService.upsert(zi, zi.getFillColor());
+        syncZoneToWebView(zi);
+        saveZonesToConfig(); // в оригинальной команде этого вызова не было — похоже на недочёт, добавил сюда
+        lastNameColorEditByMarker.put(zi.getMarkerID(), System.currentTimeMillis());
+
+        if (zi.getType() == ZoneType.SHOP && signManager != null) {
+            signManager.onShopZoneRenamed();
+        }
+        return ZoneOpResult.ok(ChatColor.GREEN + "Название обновлено!", zi.getMarkerID());
+    }
+
+    private ZoneOpResult updateColorCore(String playerName, ZoneInfo zi, String colorValue) {
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
+        if (colorValue == null || colorValue.isBlank()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Цвет не указан.");
+        }
+        ZoneOpResult cooldownFail = checkNameColorCooldown(zi);
+        if (cooldownFail != null) return cooldownFail;
+
+        try {
+            org.bukkit.Color c;
+            if (colorValue.contains(",")) {
+                // формат команды: R,G,B
+                String[] rgb = colorValue.split(",");
+                if (rgb.length != 3) return ZoneOpResult.fail(ChatColor.RED + "Формат: R,G,B");
+                c = org.bukkit.Color.fromRGB(Integer.parseInt(rgb[0]), Integer.parseInt(rgb[1]), Integer.parseInt(rgb[2]));
+            } else {
+                // формат с сайта: #RRGGBB
+                String hex = colorValue.startsWith("#") ? colorValue.substring(1) : colorValue;
+                if (hex.length() != 6) return ZoneOpResult.fail(ChatColor.RED + "Формат цвета: #RRGGBB.");
+                c = org.bukkit.Color.fromRGB(Integer.parseInt(hex, 16));
+            }
+
+            zi.setFillColor(c);
+            blueMapService.upsert(zi, c);
+            syncZoneToWebView(zi);
+            saveZonesToConfig(); // тоже добавил — в команде тоже отсутствовал save
+            lastNameColorEditByMarker.put(zi.getMarkerID(), System.currentTimeMillis());
+
+            return ZoneOpResult.ok(ChatColor.GREEN + "Цвет обновлён.", zi.getMarkerID());
+        } catch (IllegalArgumentException ex) {
+            return ZoneOpResult.fail(ChatColor.RED + "Только целые числа / некорректный цвет.");
+        }
+    }
+
+    /**
+     * Бесплатное "повышение" Участка (PLOT) до целевого типа.
+     * Никаких платежей здесь нет — стоимость уже оплачена через покупку
+     * апгрейда квоты (страна) или личного апгрейда (магазин); тут только
+     * проверяем, что квота ещё не выбрана и площадь укладывается в лимиты.
+     */
+    private ZoneOpResult upgradeTypeCore(UUID playerUuid, String playerName, ZoneInfo zi, ZoneType targetType) {
+        if (zi == null) return ZoneOpResult.fail(ChatColor.RED + "Зона не найдена.");
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
+        if (zi.getType() != ZoneType.PLOT) {
+            return ZoneOpResult.fail(ChatColor.RED + "Повысить можно только Участок.");
+        }
+        if (targetType == null || !UPGRADEABLE_FROM_PLOT.contains(targetType)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Участок нельзя повысить до этого типа.");
+        }
+
+        ZoneTypeData ztd = zoneLimits.get(targetType);
+        if (ztd == null) return ZoneOpResult.fail(ChatColor.RED + "Не задан лимит для " + targetType + ".");
+
+        // Участку разрешено пересекаться со своей же не-участковой зоной при создании
+        // (см. findOverlappingZone на сайте) — но повышать такой участок нельзя: после
+        // повышения на месте окажутся ДВЕ полноценные зоны разных типов, наложенные друг
+        // на друга, что не имеет смысла (лимиты площади/квоты считались бы дважды и т.п.).
+        ZoneInfo realOverlap = findRealOverlapExcludingParent(zi);
+        if (realOverlap != null) {
+            return ZoneOpResult.fail(ChatColor.RED + "Нельзя повысить: участок пересекается с зоной \""
+                    + realOverlap.getName() + "\". Уберите пересечение (перестройте участок) и попробуйте снова.");
+        }
+
+        double area = ZoneGeometry.totalArea(zi.getShapes()); // мульти-полигон: суммарная площадь ВСЕХ фигур участка
+        if (area > ztd.areaLimit()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Площадь участка превышает максимум для " + targetType + ": "
+                    + (int) area + " > " + (int) ztd.areaLimit() + " блоков². Уменьшите площадь и попробуйте снова.");
+        }
+        if (area < ztd.minSize()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Площадь участка меньше минимума для " + targetType + ": "
+                    + (int) area + " < " + (int) ztd.minSize() + " блоков². Расширьте участок и попробуйте снова.");
+        }
+
+        if (targetType == ZoneType.SHOP) {
+            var q = quotaService.checkPersonalShopQuotaSafe(playerUuid, playerName);
+            switch (q.check()) {
+                case PENDING -> { return ZoneOpResult.fail(ChatColor.GRAY + "Проверяем ваши права, повторите через пару секунд."); }
+                case DENIED -> { return ZoneOpResult.fail(ChatColor.RED + q.message()); }
+                case ALLOWED -> { /* ok */ }
+            }
+        } else {
+            String playerCountry = ul.countryRegistryJdbc.getCountryOfPlayer(playerName);
+            if (playerCountry == null || playerCountry.isBlank()) {
+                return ZoneOpResult.fail(ChatColor.RED + "Нужно состоять в стране, чтобы повысить участок до " + targetType + ".");
+            }
+
+            // мульти-полигон: ВСЕ фигуры участка должны лежать внутри ОДНОЙ и той же страны/колонии
+            ZoneInfo parent = null;
+            for (List<Location> shape : zi.getShapes()) {
+                ZoneInfo p = ZoneOverlapRules.findSingleContainingZoneOfTypes(
+                        shape, java.util.Set.of(ZoneType.COUNTRY, ZoneType.COLONY), zoneList.values());
+                if (p == null) {
+                    return ZoneOpResult.fail(ChatColor.RED + "Зона " + targetType + " должна полностью находиться внутри Государства или Колонии.");
+                }
+                if (parent == null) parent = p;
+                else if (!Objects.equals(parent.getMarkerID(), p.getMarkerID())) {
+                    return ZoneOpResult.fail(ChatColor.RED + "Все фигуры участка должны находиться в одном и том же Государстве/Колонии.");
+                }
+            }
+            String parentCountry = zoneCountry(parent);
+            if (parentCountry == null || !Objects.equals(normCountry(playerCountry), normCountry(parentCountry))) {
+                return ZoneOpResult.fail(ChatColor.RED + "Участок должен находиться в пределах вашей страны/колонии.");
+            }
+
+            var q = quotaService.checkCountryZoneQuotaSafe(playerCountry, targetType);
+            switch (q.check()) {
+                case PENDING -> { return ZoneOpResult.fail(ChatColor.GRAY + "Проверяем квоту страны, повторите через пару секунд."); }
+                case DENIED -> { return ZoneOpResult.fail(ChatColor.RED + q.message()); }
+                case ALLOWED -> { /* ok */ }
+            }
+
+            zi.setOwnerCountry(playerCountry);
+        }
+
+        // маркер BlueMap лежит в MarkerSet, привязанном к (старому) типу — сначала убираем его оттуда
+        blueMapService.remove(zi);
+        zi.setType(targetType);
+        blueMapService.upsert(zi, zi.getFillColor());
+        syncZoneToWebView(zi);
+        saveZonesToConfig();
+
+        return ZoneOpResult.ok(ChatColor.GREEN + "Участок повышен до \"" + ztd.displayName() + "\"!", zi.getMarkerID());
+    }
+
+    /**
+     * Есть ли у зоны {@code zi} НАСТОЯЩЕЕ пересечение площадью с какой-либо ДРУГОЙ зоной,
+     * кроме её родителя (COUNTRY/COLONY, внутри которого зона и так обязана лежать).
+     * Используется только для запрета "Повысить" — при создании участка такое пересечение
+     * (со своей же не-участковой зоной) допускается, но повышать его после этого нельзя.
+     */
+    private ZoneInfo findRealOverlapExcludingParent(ZoneInfo zi) {
+        for (List<Location> shape : zi.getShapes()) {
+            var shapePoly = ZoneGeometry.toJtsPolygon(shape);
+            if (shapePoly == null) continue;
+
+            for (ZoneInfo other : zoneList.values()) {
+                if (Objects.equals(other.getMarkerID(), zi.getMarkerID())) continue;
+                if (other.getType() == ZoneType.COUNTRY || other.getType() == ZoneType.COLONY) continue;
+
+                for (List<Location> otherShape : other.getShapes()) {
+                    var otherPoly = ZoneGeometry.toJtsPolygon(otherShape);
+                    if (otherPoly != null && ZoneGeometry.trueAreaOverlap(shapePoly, otherPoly)) return other;
+                }
+            }
+        }
+        return null;
+    }
+
+    /**
+     * Добавляет ЕЩЁ ОДНУ отдельную фигуру к уже существующей зоне (мульти-полигон).
+     * В отличие от "Расширить границы" (только приращение основной фигуры), это
+     * отдельный, геометрически не связанный участок той же зоны — с суммарным
+     * лимитом площади и ограничением по расстоянию (ZoneGeometry.checkShapeSpacing).
+     */
+    private ZoneOpResult addShapeCore(String playerName, ZoneInfo zi, List<Location> newShape) {
+        if (zi == null) return ZoneOpResult.fail(ChatColor.RED + "Зона не найдена.");
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
+
+        // Та же территориальная блокировка, что и в updateCornersCore (одни часы на маркер —
+        // добавление фигуры это тоже изменение территории Государства/Колонии). Раньше здесь
+        // проверки не было вовсе — можно было обойти кулдаун на расширение границ, просто
+        // добавляя отдельные фигуры вместо редактирования контура.
+        if (zi.getType() == ZoneType.COUNTRY || zi.getType() == ZoneType.COLONY) {
+            long now = System.currentTimeMillis();
+            long last = lastCornersEditByMarker.getOrDefault(zi.getMarkerID(), 0L);
+            long left = CORNERS_EDIT_COOLDOWN_MS - (now - last);
+            if (left > 0) {
+                long hrs = (left + 3_600_000L - 1) / 3_600_000L;
+                return ZoneOpResult.fail(ChatColor.RED + "Изменение территории доступно через ~" + ChatColor.YELLOW + hrs + ChatColor.RED + " ч.");
+            }
+        }
+
+        var vr = validator.validateAddShapeDraft(playerName, zi, newShape);
+        if (!vr.success()) return ZoneOpResult.fail(vr.message());
+
+        zi.addShape(newShape);
+        blueMapService.upsert(zi, zi.getFillColor());
+        lastCornersEditByMarker.put(zi.getMarkerID(), System.currentTimeMillis());
+        syncZoneToWebView(zi);
+        saveZonesToConfig();
+
+        return ZoneOpResult.ok(ChatColor.GREEN + "Добавлена ещё одна фигура зоны. Всего фигур: " + zi.getShapeCount() + ".", zi.getMarkerID());
+    }
+
+    // ==== Участники (реестр, без игровых прав) — только для обычных зон ====
+
+    private ZoneOpResult addMemberCore(String playerName, ZoneInfo zi, String targetPlayer) {
+        if (zi == null) return ZoneOpResult.fail(ChatColor.RED + "Зона не найдена.");
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
+        if (zi.getType() == ZoneType.COUNTRY || zi.getType() == ZoneType.COLONY) {
+            return ZoneOpResult.fail(ChatColor.RED + "Для Государства/Колонии участники зоны не применяются — используйте систему прав страны.");
+        }
+        if (targetPlayer == null || targetPlayer.isBlank()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Не указан игрок.");
+        }
+        if (NameUtil.eqCi(targetPlayer, playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы уже владелец этой зоны.");
+        }
+        var target = Bukkit.getOfflinePlayer(targetPlayer);
+        if (!target.hasPlayedBefore() && !target.isOnline()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Игрок \"" + targetPlayer + "\" не найден.");
+        }
+        String canonicalName = target.getName() != null ? target.getName() : targetPlayer;
+
+        if (!zi.addMember(canonicalName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Этот игрок уже участник зоны.");
+        }
+        syncZoneToWebView(zi);
+        saveZonesToConfig();
+
+        return ZoneOpResult.ok(ChatColor.GREEN + canonicalName + " добавлен(а) в участники зоны \"" + zi.getName() + "\".", zi.getMarkerID());
+    }
+
+    private ZoneOpResult removeMemberCore(String playerName, ZoneInfo zi, String targetPlayer) {
+        if (zi == null) return ZoneOpResult.fail(ChatColor.RED + "Зона не найдена.");
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
+        if (targetPlayer == null || targetPlayer.isBlank()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Не указан игрок.");
+        }
+        if (!zi.removeMember(targetPlayer)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Этот игрок не участник зоны.");
+        }
+        syncZoneToWebView(zi);
+        saveZonesToConfig();
+
+        return ZoneOpResult.ok(ChatColor.GREEN + targetPlayer + " удалён(а) из участников зоны \"" + zi.getName() + "\".", zi.getMarkerID());
+    }
+
+    /** Передача владения зоной другому игроку. Старый владелец автоматически становится участником. */
+    private ZoneOpResult transferOwnershipCore(String playerName, ZoneInfo zi, String targetPlayer) {
+        if (zi == null) return ZoneOpResult.fail(ChatColor.RED + "Зона не найдена.");
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
+        if (zi.getType() == ZoneType.COUNTRY || zi.getType() == ZoneType.COLONY) {
+            return ZoneOpResult.fail(ChatColor.RED + "Передача владения недоступна для Государства/Колонии.");
+        }
+        if (targetPlayer == null || targetPlayer.isBlank()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Не указан игрок.");
+        }
+        if (NameUtil.eqCi(targetPlayer, playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы уже владелец этой зоны.");
+        }
+        var target = Bukkit.getOfflinePlayer(targetPlayer);
+        if (!target.hasPlayedBefore() && !target.isOnline()) {
+            return ZoneOpResult.fail(ChatColor.RED + "Игрок \"" + targetPlayer + "\" не найден.");
+        }
+        String canonicalName = target.getName() != null ? target.getName() : targetPlayer;
+
+        String previousOwner = zi.getOwner();
+        zi.removeMember(canonicalName); // новый владелец не должен одновременно числиться участником
+        zi.setOwner(canonicalName);
+        zi.addMember(previousOwner); // прежний владелец остаётся с доступом как участник
+
+        blueMapService.upsert(zi, zi.getFillColor());
+        syncZoneToWebView(zi);
+        saveZonesToConfig();
+
+        return ZoneOpResult.ok(ChatColor.GREEN + "Владение зоной \"" + zi.getName() + "\" передано игроку " + canonicalName + ".", zi.getMarkerID());
     }
 
     // ==== Remove ====
@@ -487,10 +906,25 @@ public class ZoneManager {
         zoneList.remove(zi.getMarkerID());
         lastCornersEditByMarker.remove(zi.getMarkerID());
 
-        // BlueMap cleanup
         if (blueMapService != null) {
             blueMapService.remove(zi);
         }
+
+        deleteZoneFromWebView(zi.getMarkerID());
+    }
+
+    private void deleteZoneFromWebView(String markerId) {
+        Bukkit.getScheduler().runTaskAsynchronously(ul, () -> {
+            try (Connection con = DBConnect()) {
+                if (con == null) return;
+                try (PreparedStatement ps = con.prepareStatement("DELETE FROM zones_view WHERE marker_id = ?")) {
+                    ps.setString(1, markerId);
+                    ps.executeUpdate();
+                }
+            } catch (Throwable t) {
+                Bukkit.getLogger().severe("[ZoneManager] deleteZoneFromWebView error: " + t);
+            }
+        });
     }
 
     public void confirmRemoveZone(Player p) {
@@ -499,119 +933,140 @@ public class ZoneManager {
             p.sendMessage(ChatColor.RED + "Нет зоны для удаления!");
             return;
         }
-
-        // ЖЁСТКАЯ ПРОВЕРКА ВЛАДЕЛЬЦА
-        if (!NameUtil.eqCi(zi.getOwner(), p.getName())) {
-            p.sendMessage(ChatColor.RED + "Вы не владелец этой зоны.");
-            playerLastZone.remove(p.getUniqueId());
-            return;
-        }
-
-        // ===== УДАЛЕНИЕ СТРАНЫ С КАСКАДОМ =====
-        if (zi.getType() == ZoneType.COUNTRY) {
-            // Имя страны (используем helper, чтобы не промахнуться)
-            String countryName = zoneCountry(zi);
-            if (countryName == null || countryName.isBlank()) {
-                // fallback — всё равно что-то выведем
-                countryName = zi.getName();
-            }
-            String normTarget = normCountry(countryName);
-
-            // Сохраняем онлайн-игроков этой страны, чтобы после удаления очистить им LP-префиксы
-            Set<UUID> affectedPlayers = Bukkit.getOnlinePlayers().stream()
-                    .filter(pl -> {
-                        String c = ul.countryRegistryJdbc.getCountryOfPlayer(pl.getName());
-                        return c != null && Objects.equals(normCountry(c), normTarget);
-                    })
-                    .map(Player::getUniqueId)
-                    .collect(Collectors.toSet());
-
-            // 0) Широковещалка
-            Bukkit.broadcastMessage(
-                    ChatColor.RED + "[Уведомление] Государство \"" +
-                            ChatColor.GOLD + countryName +
-                            ChatColor.RED + "\" было удалено владельцем " +
-                            ChatColor.YELLOW + p.getName() + ChatColor.RED + "."
-            );
-
-            List<ZoneInfo> toDelete = new ArrayList<>();
-            for (ZoneInfo z : new ArrayList<>(zoneList.values())) {
-                String zCountry = zoneCountry(z);
-                if (zCountry == null || zCountry.isBlank()) continue;
-                if (Objects.equals(normCountry(zCountry), normTarget)) {
-                    toDelete.add(z);
-                }
-            }
-
-            // 2) Удаляем все найденные зоны локально
-            for (ZoneInfo z : toDelete) {
-                removeZoneInternal(z);
-            }
-
-            p.sendMessage(ChatColor.GREEN + "Государство \"" + countryName
-                    + "\" и все связанные с ним зоны (" + toDelete.size() + " шт.) удалены.");
-
-            // Сбрасываем lastZone игрока и сохраняем YAML
-            playerLastZone.remove(p.getUniqueId());
-            saveZonesToConfig();
-
-            // 3) Асинхронная очистка по БД — как у тебя было, только используем countryName
-            String finalCountryName = countryName;
-            Bukkit.getScheduler().runTaskAsynchronously(ul, () -> {
-                try (Connection conn = UnityLauncher.DBConnect()) {
-                    if (conn == null) {
-                        throw new RuntimeException("DBConnect() вернул null");
-                    }
-                    try {
-                        conn.setAutoCommit(false);
-
-                        // 1. Чистим отношения дипломатии для этой страны, если DAO есть
-                        if (UnityLauncher.getInstance().countryRelationshipDao != null) {
-                            UnityLauncher.getInstance().countryRelationshipDao.deleteByCountryTx(conn, finalCountryName);
-                        }
-
-                        // 2. Удаляем страну из таблицы Countries + чистим локальный кэш CountryRegistryJdbc
-                        UnityLauncher.getInstance().countryRegistryJdbc.deleteCountryTx(conn, finalCountryName);
-
-                        conn.commit();
-                    } catch (Exception inner) {
-                        try { conn.rollback(); } catch (Exception ignore) {}
-                        throw inner;
-                    }
-
-                    // После успешного коммита — на главном потоке чистим LP-префиксы и пишем лог
-                    Bukkit.getScheduler().runTask(ul, () -> {
-                        var prefixService = UnityLauncher.getInstance().luckPermsPrefixService;
-                        if (prefixService != null && !affectedPlayers.isEmpty()) {
-                            for (UUID uuid : affectedPlayers) {
-                                prefixService.clear(uuid);
-                            }
-                        } else if (prefixService == null && !affectedPlayers.isEmpty()) {
-                            Bukkit.getLogger().warning("[UnityLauncher] luckPermsPrefixService == null при удалении страны " + finalCountryName);
-                        }
-
-                        Bukkit.getLogger().info("[Zones] Страна \"" + finalCountryName + "\" и её зоны удалены из БД (TX ok).");
-                    });
-
-                } catch (Exception ex) {
-                    Bukkit.getScheduler().runTask(ul, () -> {
-                        Bukkit.getLogger().warning("[Zones] Ошибка при удалении страны \"" + finalCountryName + "\" из БД: " + ex.getMessage());
-                        p.sendMessage(ChatColor.RED + "Удаление страны в БД завершилось ошибкой, см. консоль.");
-                    });
-                }
-            });
-
-            return;
-        }
-
-        // ===== Обычная зона (не страна) =====
-        removeZoneInternal(zi);
-
-        p.sendMessage(ChatColor.GREEN + "Зона \"" + zi.getName() + "\" удалена!");
+        ZoneOpResult r = removeZoneCore(p.getName(), zi, p);
+        if (r.message() != null) p.sendMessage(r.message());
         playerLastZone.remove(p.getUniqueId());
+    }
+    /** notifyPlayer может быть null (веб-вызов, игрок мог выйти к моменту завершения асинхронной части). */
+    private ZoneOpResult removeZoneCore(String playerName, ZoneInfo zi, Player notifyPlayer) {
+        if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+            return ZoneOpResult.fail(ChatColor.RED + "Вы не владелец этой зоны.");
+        }
 
-        // Фиксируем YAML
+        if (zi.getType() == ZoneType.COUNTRY) {
+            return ZoneOpResult.fail(ChatColor.RED + "Территорию Государства нельзя удалить напрямую — расформируйте страну на странице страны.");
+        }
+
+        removeZoneInternal(zi);
         saveZonesToConfig();
+        return ZoneOpResult.ok(ChatColor.GREEN + "Зона \"" + zi.getName() + "\" удалена!", zi.getMarkerID());
+    }
+
+    /**
+     * Каскадное удаление территории Государства и ВСЕХ зон внутри неё — из памяти,
+     * BlueMap, zones_view, плюс удаление самой страны и её отношений из БД.
+     * Переиспользуется и ручным удалением ({@code /ul zone remove}), и автоматической
+     * чисткой "осиротевших" территорий ({@link #cleanupOrphanCountryZones()}) — например,
+     * когда лидер выходит из страны последним и сайт удаляет её из Countries, не зная
+     * ничего про игровые зоны (см. countryOperations.php: CountryLeave, disband-ветка).
+     */
+    private ZoneOpResult disbandCountryZoneCascade(ZoneInfo zi, String broadcastSuffix, Player notifyPlayer) {
+        String countryName = zoneCountry(zi);
+        if (countryName == null || countryName.isBlank()) countryName = zi.getName();
+        final String finalCountryName = countryName;
+        final String normTarget = normCountry(countryName);
+
+        Set<UUID> affectedPlayers = Bukkit.getOnlinePlayers().stream()
+                .filter(pl -> {
+                    String c = ul.countryRegistryJdbc.getCountryOfPlayer(pl.getName());
+                    return c != null && Objects.equals(normCountry(c), normTarget);
+                })
+                .map(Player::getUniqueId)
+                .collect(Collectors.toSet());
+
+        Bukkit.broadcastMessage(
+                ChatColor.RED + "[Уведомление] Государство \"" + ChatColor.GOLD + finalCountryName + broadcastSuffix
+        );
+
+        List<ZoneInfo> toDelete = new ArrayList<>();
+        for (ZoneInfo z : new ArrayList<>(zoneList.values())) {
+            String zCountry = zoneCountry(z);
+            if (zCountry == null || zCountry.isBlank()) continue;
+            if (Objects.equals(normCountry(zCountry), normTarget)) toDelete.add(z);
+        }
+        for (ZoneInfo z : toDelete) removeZoneInternal(z);
+
+        saveZonesToConfig();
+
+        Bukkit.getScheduler().runTaskAsynchronously(ul, () -> {
+            try (Connection conn = UnityLauncher.DBConnect()) {
+                if (conn == null) throw new RuntimeException("DBConnect() вернул null");
+                try {
+                    conn.setAutoCommit(false);
+                    if (UnityLauncher.getInstance().countryRelationshipDao != null) {
+                        UnityLauncher.getInstance().countryRelationshipDao.deleteByCountryTx(conn, finalCountryName);
+                    }
+                    // идемпотентно: если страна уже удалена на сайте (напр. выход последнего
+                    // лидера), тут просто DELETE на 0 строк — не ошибка
+                    UnityLauncher.getInstance().countryRegistryJdbc.deleteCountryTx(conn, finalCountryName);
+                    conn.commit();
+                } catch (Exception inner) {
+                    try { conn.rollback(); } catch (Exception ignore) {}
+                    throw inner;
+                }
+
+                Bukkit.getScheduler().runTask(ul, () -> {
+                    var prefixService = UnityLauncher.getInstance().luckPermsPrefixService;
+                    if (prefixService != null && !affectedPlayers.isEmpty()) {
+                        for (UUID uuid : affectedPlayers) prefixService.clear(uuid);
+                    }
+                    Bukkit.getLogger().info("[Zones] Страна \"" + finalCountryName + "\" и её зоны удалены из БД (TX ok).");
+                });
+            } catch (Exception ex) {
+                Bukkit.getScheduler().runTask(ul, () -> {
+                    Bukkit.getLogger().warning("[Zones] Ошибка при удалении страны \"" + finalCountryName + "\" из БД: " + ex.getMessage());
+                    if (notifyPlayer != null && notifyPlayer.isOnline()) {
+                        notifyPlayer.sendMessage(ChatColor.RED + "Удаление страны в БД завершилось ошибкой, см. консоль.");
+                    }
+                });
+            }
+        });
+
+        return ZoneOpResult.ok(ChatColor.GREEN + "Государство \"" + finalCountryName
+                + "\" и все связанные с ним зоны (" + toDelete.size() + " шт.) удалены.", zi.getMarkerID());
+    }
+
+    /**
+     * Периодическая проверка "осиротевших" территорий: COUNTRY-зона существует у нас в
+     * памяти, но её страны уже нет в Countries (например, лидер вышел последним и сайт
+     * удалил Countries-строку в countryOperations.php, ничего не сообщив плагину — там
+     * нет вызова веб-очереди зон, только прямой DELETE). Чистим территорию и всё, что
+     * внутри неё, тем же путём, что и ручное удаление.
+     */
+    private void cleanupOrphanCountryZones() {
+        List<ZoneInfo> countryZones = zoneList.values().stream()
+                .filter(z -> z.getType() == ZoneType.COUNTRY)
+                .toList();
+        if (countryZones.isEmpty()) return;
+
+        // countryExistsCached() reads an in-memory cache that refreshes itself
+        // asynchronously and returns stale (possibly still-empty) data while that
+        // refresh is in flight — see CountryRegistryJdbc.refreshCacheIfExpired().
+        // Right after server restart the cache hasn't loaded even once yet, so
+        // every real country would read back as "doesn't exist" and this loop
+        // would disband them all. Force one synchronous load first so the check
+        // below always sees real data.
+        ul.countryRegistryJdbc.forceRefreshBlocking();
+
+        for (ZoneInfo zi : countryZones) {
+            // маркер мог быть уже удалён предыдущей итерацией (одна COUNTRY-зона —
+            // один маркер, но на всякий случай проверяем актуальность)
+            if (!zoneList.containsKey(zi.getMarkerID())) continue;
+
+            String countryName = zoneCountry(zi);
+            if (countryName == null || countryName.isBlank()) countryName = zi.getName();
+            if (ul.countryRegistryJdbc.countryExistsCached(countryName)) continue;
+
+            Bukkit.getLogger().info("[Zones] Обнаружена осиротевшая территория Государства \""
+                    + countryName + "\" (страны больше нет в Countries) — удаляю.");
+            disbandCountryZoneCascade(zi,
+                    ChatColor.RED + "\" было автоматически расформировано — страна больше не существует.", null);
+        }
+    }
+
+    /** Запускает периодическую чистку осиротевших территорий Государств (см. cleanupOrphanCountryZones). */
+    public void startOrphanCountryZoneCleanup(long periodTicks) {
+        Bukkit.getScheduler().runTaskTimer(ul, this::cleanupOrphanCountryZones, periodTicks, periodTicks);
     }
 
     public void cancelRemoveZone(Player p) {
@@ -749,7 +1204,7 @@ public class ZoneManager {
         if (w == null) return null;
 
         return zoneList.values().stream()
-                .filter(z -> ZoneGeometry.worldOk(z.getCorners(), w) && ZoneGeometry.pointInZone(loc, z.getCorners(), Y_MIN, Y_MAX))
+                .filter(z -> ZoneGeometry.worldOkAny(z.getShapes(), w) && ZoneGeometry.pointInAnyShape(loc, z.getShapes(), Y_MIN, Y_MAX))
                 .max(Comparator.comparingInt((ZoneInfo z) -> {
                     ZoneTypeData d = zoneLimits.get(z.getType());
                     return d != null ? d.index() : Integer.MIN_VALUE;
@@ -823,10 +1278,7 @@ public class ZoneManager {
     // ---- ЕДИНЫЙ ПРАВИЛЬНЫЙ ХЕЛПЕР ДЛЯ ПРАВИЛ ПЕРЕСЕЧЕНИЙ ----
 
     private static String normCountry(String s) {
-        if (s == null) return null;
-        String t = s.trim().toLowerCase(Locale.ROOT);
-        t = t.replace(' ', '_');
-        return t.replaceAll("[^a-z0-9_\\-.]", "");
+        return CountryNameUtil.normalizeCountry(s);
     }
 
     /** Страна зоны: сначала ownerCountry, для COUNTRY — fallback к имени зоны */
@@ -850,8 +1302,8 @@ public class ZoneManager {
         if (w == null) return null;
         for (ZoneInfo z : zoneList.values()) {
             if (z.getType() != ZoneType.SHOP) continue;
-            if (!ZoneGeometry.worldOk(z.getCorners(), w)) continue;
-            if (ZoneGeometry.pointInZone(loc, z.getCorners(), Y_MIN, Y_MAX)) return z;
+            if (!ZoneGeometry.worldOkAny(z.getShapes(), w)) continue;
+            if (ZoneGeometry.pointInAnyShape(loc, z.getShapes(), Y_MIN, Y_MAX)) return z;
         }
         return null;
     }
@@ -882,10 +1334,16 @@ public class ZoneManager {
         }
 
         // 2) Если это внутренняя зона без ownerCountry —
-        //    ищем родителя COUNTRY / COLONY, который её целиком содержит
+        //    ищем родителя COUNTRY / COLONY, который целиком содержит ТУ ФИГУРУ
+        //    зоны, в которой реально стоит игрок (мульти-полигон: разные фигуры
+        //    одной зоны в принципе могут лежать в разных странах)
         try {
+            List<Location> shapeAtLoc = here.getCorners();
+            for (List<Location> shape : here.getShapes()) {
+                if (ZoneGeometry.pointInZone(loc, shape, -64, 255)) { shapeAtLoc = shape; break; }
+            }
             ZoneInfo parent = ZoneOverlapRules.findSingleContainingZoneOfTypes(
-                    here.getCorners(),
+                    shapeAtLoc,
                     java.util.Set.of(ZoneType.COUNTRY, ZoneType.COLONY),
                     zoneList.values()
             );
@@ -903,12 +1361,344 @@ public class ZoneManager {
     }
 
     /**
+     * true, если в этой точке есть зона, владельцем которой является playerName,
+     * ЛИБО зона принадлежит стране, гражданином которой является playerName.
+     * Используется ActivityTracker'ом, чтобы не засчитывать полный вес "трафика"
+     * за визиты хозяина/сограждан в свою же зону (иначе налог на землю растёт
+     * от собственной игры, а не от реального чужого интереса к месту).
+     * Возвращает false, если зоны в этой точке нет вообще.
+     */
+    public boolean isOwnerOrMemberAt(Location loc, String playerName) {
+        if (playerName == null || playerName.isBlank()) return false;
+        ZoneInfo z = getZoneAt(loc);
+        if (z == null) return false;
+
+        if (NameUtil.eqCi(z.getOwner(), playerName)) return true;
+
+        String zoneCountry = zoneCountry(z);
+        if (zoneCountry == null || zoneCountry.isBlank()) return false;
+
+        String playerCountry = ul.countryRegistryJdbc.getCountryOfPlayer(playerName);
+        return playerCountry != null && !playerCountry.isBlank()
+                && Objects.equals(normCountry(playerCountry), normCountry(zoneCountry));
+    }
+
+    /**
      * Та же страна, но уже нормализованная (как normCountry в этом классе).
      * Удобно для сравнения и вызовов countryMaxLevel(...).
      */
     public String getCountryCanonicalAt(Location loc) {
         String c = getCountryAt(loc);
         return c != null ? normCountry(c) : null;
+    }
+    @Override
+    public Result handle(ZoneWebRequestService.ZoneWebRequest request) {
+        ZoneType type = null;
+        if (request.zoneType() != null) {
+            try {
+                type = ZoneType.valueOf(request.zoneType());
+            } catch (IllegalArgumentException ex) {
+                return Result.error("Неизвестный тип зоны: " + request.zoneType());
+            }
+        }
+
+        String colorHex = (request.payload() != null && request.payload().has("color"))
+                ? request.payload().get("color").getAsString()
+                : null;
+
+        String targetPlayer = (request.payload() != null && request.payload().has("targetPlayer"))
+                ? request.payload().get("targetPlayer").getAsString()
+                : null;
+
+        // какую именно фигуру многофигурной зоны редактируем (UPDATE_CORNERS); 0 по умолчанию
+        int shapeIndex = (request.payload() != null && request.payload().has("shapeIndex"))
+                ? request.payload().get("shapeIndex").getAsInt()
+                : 0;
+
+        // CREATE поддерживает мульти-полигон (несколько отдельных фигур зоны сразу) —
+        // обрабатываем его отдельной веткой с payload.shapes вместо payload.points.
+        if (request.action() == ZoneWebRequestService.Action.CREATE) {
+            World world = (request.worldName() != null) ? Bukkit.getWorld(request.worldName()) : null;
+            List<List<double[]>> shapesXZ = parseShapesFromPayload(request.payload());
+            List<List<Location>> shapes = new ArrayList<>(shapesXZ.size());
+            for (List<double[]> s : shapesXZ) shapes.add(toLocations(world, s));
+
+            ZoneOpResult r = handleCreateWebRequest(request.playerUuid(), type, request.zoneName(), shapes, colorHex);
+            return r.success() ? Result.ok(r.markerId()) : Result.error(stripColor(r.message()));
+        }
+
+        List<double[]> points = parsePointsFromPayload(request.payload());
+        ZoneOpResult r = handleWebRequest(
+                request.playerUuid(), request.action(), type, request.zoneName(),
+                request.worldName(), points, request.markerId(), colorHex, targetPlayer, shapeIndex
+        );
+
+        return r.success()
+                ? Result.ok(r.markerId())
+                : Result.error(stripColor(r.message()));
+    }
+
+    private List<double[]> parsePointsFromPayload(JsonObject payload) {
+        List<double[]> out = new ArrayList<>();
+        if (payload == null || !payload.has("points")) return out;
+        JsonArray arr = payload.getAsJsonArray("points");
+        for (var el : arr) {
+            JsonObject o = el.getAsJsonObject();
+            out.add(new double[]{ o.get("x").getAsDouble(), o.get("z").getAsDouble() });
+        }
+        return out;
+    }
+
+    /**
+     * Мульти-полигон: payload.shapes = [[{x,z},...], [{x,z},...], ...].
+     * Обратная совместимость: если shapes нет, но есть старый плоский payload.points — считаем это одной фигурой.
+     */
+    private List<List<double[]>> parseShapesFromPayload(JsonObject payload) {
+        List<List<double[]>> out = new ArrayList<>();
+        if (payload == null) return out;
+
+        if (payload.has("shapes")) {
+            for (var shapeEl : payload.getAsJsonArray("shapes")) {
+                List<double[]> shape = new ArrayList<>();
+                for (var el : shapeEl.getAsJsonArray()) {
+                    JsonObject o = el.getAsJsonObject();
+                    shape.add(new double[]{ o.get("x").getAsDouble(), o.get("z").getAsDouble() });
+                }
+                if (!shape.isEmpty()) out.add(shape);
+            }
+            return out;
+        }
+
+        List<double[]> legacy = parsePointsFromPayload(payload);
+        if (!legacy.isEmpty()) out.add(legacy);
+        return out;
+    }
+
+    /** Точка входа для веб-заявок CREATE — поддерживает несколько фигур сразу (мульти-полигон). */
+    private ZoneOpResult handleCreateWebRequest(UUID playerUuid, ZoneType type, String zoneName,
+                                                List<List<Location>> shapes, String colorHex) {
+        String playerName = Bukkit.getOfflinePlayer(playerUuid).getName();
+        if (playerName == null) return ZoneOpResult.fail("Не удалось определить игрока по UUID.");
+        if (shapes.isEmpty() || shapes.get(0).isEmpty()) return ZoneOpResult.fail("Нет точек.");
+
+        if (type == ZoneType.COUNTRY) {
+            return buildZoneCountryCore(playerName, shapes, colorHex);
+        }
+        return buildZoneCoreMulti(playerUuid, playerName, type, zoneName, shapes, colorHex);
+    }
+
+    /**
+     * Создаёт зону из НЕСКОЛЬКИХ фигур: первая фигура проходит через обычный
+     * buildZoneCore (без изменений — ноль риска регрессии для однополигональных
+     * зон), остальные добавляются через тот же валидатор, что и ADD_SHAPE.
+     * COLONY принципиально не поддерживает доп. фигуры. COUNTRY сюда вообще не
+     * попадает — для неё есть отдельное мульти-полигонное ядро buildZoneCountryCore
+     * (см. handleCreateWebRequest), оставляем проверку ниже как защитный дубль.
+     */
+    private ZoneOpResult buildZoneCoreMulti(UUID playerUuid, String playerName, ZoneType type, String zoneName,
+                                            List<List<Location>> shapes, String colorHex) {
+        // при 2+ фигурах НЕ синхронизируем в zones_view сразу — иначе эта запись
+        // (ещё без доп. фигур) может асинхронно "обогнать" вторую, финальную запись
+        // ниже (added > 0) и extra_shapes молча потеряются (гонка двух async-задач
+        // на один marker_id). Синхронизируем один раз, уже после сборки всей зоны.
+        boolean syncFirstImmediately = shapes.size() == 1;
+        ZoneOpResult first = buildZoneCore(playerUuid, playerName, type, zoneName, shapes.get(0), colorHex, syncFirstImmediately);
+        if (!first.success() || shapes.size() == 1) return first;
+
+        if (type == ZoneType.COUNTRY || type == ZoneType.COLONY) {
+            // доп. фигуры не поддерживаются для этого типа — первая (и единственная)
+            // фигура так и не была синхронизирована выше (syncFirstImmediately=false
+            // при shapes.size()>1), досинхронизируем её здесь
+            ZoneInfo onlyShape = zoneList.get(first.markerId());
+            if (onlyShape != null) syncZoneToWebView(onlyShape);
+            return first;
+        }
+
+        ZoneInfo created = zoneList.get(first.markerId());
+        if (created == null) return first;
+
+        int added = 0;
+        String rejectMsg = null;
+        for (int i = 1; i < shapes.size(); i++) {
+            List<Location> extra = shapes.get(i);
+            var vr = validator.validateAddShapeDraft(playerName, created, extra);
+            if (!vr.success()) {
+                rejectMsg = ChatColor.stripColor(vr.message());
+                break; // дальше проверять смысла нет — сообщим об одном отказе, остальные фигуры игнорируем
+            }
+            created.addShape(extra);
+            added++;
+        }
+
+        if (added > 0) {
+            blueMapService.upsert(created, created.getFillColor());
+            saveZonesToConfig();
+        }
+        // синхронизируем в любом случае (даже если added==0, т.е. все доп. фигуры
+        // отклонены валидатором) — иначе первая фигура так и останется несинхронизированной,
+        // т.к. buildZoneCore выше специально пропустил sync (syncFirstImmediately=false)
+        syncZoneToWebView(created);
+
+        String msg = ChatColor.GREEN + "Зона \"" + zoneName + "\" создана"
+                + (added > 0 ? " (" + (added + 1) + " фигур(ы))" : "") + "!"
+                + (rejectMsg != null ? ChatColor.RED + " Не все фигуры добавлены: " + rejectMsg : "");
+        return ZoneOpResult.ok(msg, created.getMarkerID());
+    }
+
+    /** Сообщения из ZoneOpResult содержат §-коды ChatColor - на сайте они не нужны. */
+    private static String stripColor(String msg) {
+        return msg == null ? null : ChatColor.stripColor(msg);
+    }
+    /** Точка входа для веб-заявок. Требует, чтобы игрок был онлайн. */
+    public ZoneOpResult handleWebRequest(UUID playerUuid, ZoneWebRequestService.Action action,
+                                         ZoneType type, String zoneName, String worldName,
+                                         List<double[]> xzPoints, String markerId, String colorHex,
+                                         String targetPlayer, int shapeIndex) {
+
+        String playerName = Bukkit.getOfflinePlayer(playerUuid).getName();
+        if (playerName == null) {
+            return ZoneOpResult.fail("Не удалось определить игрока по UUID.");
+        }
+
+        if (action != ZoneWebRequestService.Action.CREATE) {
+            ZoneInfo zi = zoneList.get(markerId);
+            if (zi == null) return ZoneOpResult.fail("Зона не найдена.");
+            if (!NameUtil.eqCi(zi.getOwner(), playerName)) {
+                return ZoneOpResult.fail("Вы не владелец этой зоны.");
+            }
+        }
+
+        World world = (worldName != null) ? Bukkit.getWorld(worldName) : null;
+        List<Location> pts = toLocations(world, xzPoints);
+
+        return switch (action) {
+            case CREATE -> (type == ZoneType.COUNTRY)
+                    ? buildZoneCountryCore(playerName, pts == null ? List.of() : List.of(pts), colorHex)
+                    : buildZoneCore(playerUuid, playerName, type, zoneName, pts, colorHex);
+            case UPDATE_CORNERS -> updateCornersCore(playerName, zoneList.get(markerId), pts, false, shapeIndex);
+            case UPDATE_NAME -> updateNameCore(playerName, zoneList.get(markerId), zoneName);
+            case UPDATE_COLOR -> updateColorCore(playerName, zoneList.get(markerId), colorHex);
+            case DELETE -> removeZoneCore(playerName, zoneList.get(markerId), Bukkit.getPlayer(playerUuid));
+            case UPGRADE_TYPE -> upgradeTypeCore(playerUuid, playerName, zoneList.get(markerId), type);
+            case ADD_SHAPE -> addShapeCore(playerName, zoneList.get(markerId), pts);
+            case ADD_MEMBER -> addMemberCore(playerName, zoneList.get(markerId), targetPlayer);
+            case REMOVE_MEMBER -> removeMemberCore(playerName, zoneList.get(markerId), targetPlayer);
+            case TRANSFER_OWNERSHIP -> transferOwnershipCore(playerName, zoneList.get(markerId), targetPlayer);
+        };
+    }
+
+    /** Y ставим по высоте рельефа — семантически не важен, только для красивого отображения. */
+    private List<Location> toLocations(World world, List<double[]> xz) {
+        if (world == null || xz == null) return List.of();
+        List<Location> out = new ArrayList<>(xz.size());
+        for (double[] p : xz) {
+            int y = world.getHighestBlockYAt((int) Math.floor(p[0]), (int) Math.floor(p[1]));
+            out.add(new Location(world, p[0], y, p[1]));
+        }
+        return out;
+    }
+
+    private void syncZoneToWebView(ZoneInfo z) {
+        // считаем на главном потоке (billing state дешёвое, а ZoneInfo не
+        // потокобезопасен) — сама запись в БД всё равно async ниже.
+        // Активные апгрейды НЕ считаем и не храним здесь: они уже живут в
+        // Countries.Upgrades/CountryInfo (и Users.StatsData.playerUpgrades для
+        // личных зон без страны) — сайт достаёт их оттуда напрямую при чтении
+        // zones_list.php, чтобы не дублировать одни и те же данные в двух местах.
+        double dueCost = z.getDueSinceLastBill(LocalDate.now());
+        java.sql.Date nextBilling = java.sql.Date.valueOf(z.getNextBillingDate());
+
+        // extra_shapes_json — доп. фигуры зоны (мульти-полигон), НЕ включая основную
+        // (та по-прежнему пишется в corners_json как раньше, чтобы старые потребители
+        // на сайте, не знающие про мульти-полигон, продолжали работать без изменений)
+        String extraShapesJson = extraShapesToJson(z);
+        // members_json — реестр участников (НЕ владелец); "[]" для COUNTRY/COLONY
+        // и для зон без участников. Формат такой же простой список ников, как и
+        // все остальные ..._json колонки здесь.
+        String membersJson = membersToJson(z);
+
+        Bukkit.getScheduler().runTaskAsynchronously(ul, () -> {
+            String sql = """
+            INSERT INTO zones_view (marker_id, zone_id, type, name, owner, owner_country, world_name, corners_json, extra_shapes_json, members_json, color_rgb, corners_locked_until, due_cost, next_billing_date)
+            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+            ON DUPLICATE KEY UPDATE
+                zone_id=VALUES(zone_id), type=VALUES(type), name=VALUES(name), owner=VALUES(owner),
+                owner_country=VALUES(owner_country), world_name=VALUES(world_name),
+                corners_json=VALUES(corners_json), extra_shapes_json=VALUES(extra_shapes_json),
+                members_json=VALUES(members_json), color_rgb=VALUES(color_rgb),
+                corners_locked_until=VALUES(corners_locked_until),
+                due_cost=VALUES(due_cost), next_billing_date=VALUES(next_billing_date)
+            """;
+            try (Connection con = DBConnect()) {
+                if (con == null) return;
+                try (PreparedStatement ps = con.prepareStatement(sql)) {
+                    ps.setString(1, z.getMarkerID());
+                    ps.setString(2, z.getID());
+                    ps.setString(3, z.getType().name());
+                    ps.setString(4, z.getName());
+                    ps.setString(5, z.getOwner());
+                    ps.setString(6, z.getCountryName());
+                    ps.setString(7, z.getWorld() != null ? z.getWorld().getName() : null);
+                    ps.setString(8, cornersToJson(z.getCorners()));
+                    ps.setString(9, extraShapesJson);
+                    ps.setString(10, membersJson);
+                    ps.setInt(11, z.getFillColor() != null ? z.getFillColor().asRGB() : 0xFF0000);
+                    Long lockedUntil = null;
+                    if (z.getType() == ZoneType.COUNTRY || z.getType() == ZoneType.COLONY) {
+                        Long lastEdit = lastCornersEditByMarker.get(z.getMarkerID());
+                        if (lastEdit != null) lockedUntil = lastEdit + CORNERS_EDIT_COOLDOWN_MS;
+                    }
+                    ps.setTimestamp(12, lockedUntil != null ? new Timestamp(lockedUntil) : null);
+                    ps.setDouble(13, dueCost);
+                    ps.setDate(14, nextBilling);
+                    ps.executeUpdate();
+                }
+            } catch (Throwable t) {
+                Bukkit.getLogger().severe("[ZoneManager] syncZoneToWebView error: " + t);
+            }
+        });
+    }
+
+    /** Публичная обёртка — используется биллинг-тиком, чтобы освежить due_cost/дату во всех зонах раз в день. */
+    public void refreshWebView(ZoneInfo z) {
+        syncZoneToWebView(z);
+    }
+
+    private static final Gson WEB_GSON = new Gson();
+
+    private String cornersToJson(List<Location> corners) {
+        JsonArray arr = new JsonArray();
+        for (Location l : corners) {
+            JsonObject o = new JsonObject();
+            o.addProperty("x", l.getX());
+            o.addProperty("z", l.getZ());
+            arr.add(o);
+        }
+        return WEB_GSON.toJson(arr);
+    }
+
+    /** [[{x,z},...], ...] для всех фигур КРОМЕ основной (shapes[0]); "[]" если фигура одна. */
+    private String extraShapesToJson(ZoneInfo z) {
+        List<List<Location>> shapes = z.getShapes();
+        JsonArray outer = new JsonArray();
+        for (int i = 1; i < shapes.size(); i++) {
+            JsonArray inner = new JsonArray();
+            for (Location l : shapes.get(i)) {
+                JsonObject o = new JsonObject();
+                o.addProperty("x", l.getX());
+                o.addProperty("z", l.getZ());
+                inner.add(o);
+            }
+            outer.add(inner);
+        }
+        return WEB_GSON.toJson(outer);
+    }
+
+    /** ["nick1","nick2",...] — участники зоны (без владельца); "[]" если участников нет. */
+    private String membersToJson(ZoneInfo z) {
+        JsonArray arr = new JsonArray();
+        for (String m : z.getMembers()) arr.add(m);
+        return WEB_GSON.toJson(arr);
     }
 
 }
